Updated some config and remapped the chat wheel a bit

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -51,7 +51,6 @@ dota_player_multipler_orders "1"      //CTRL+click to select all units you contr
 dota_player_units_auto_attack "1"     //Summoned units always auto attack
 // dota_reset_camera_on_spawn "0"     //Camera doesn't jump to hero on respawn
 
-
 //Fade time on DMG done/received reduced to half duration
 dota_health_hurt_decay_time_max "0.4"   // (Default "0.8")
 dota_health_hurt_decay_time_min "0.15"  // (Default "0.3")
@@ -101,9 +100,9 @@ dota_minimap_misclick_time "0.25"
 bind "," "chatwheel_say 2"//Get back!
 bind "." "chatwheel_say 1"//Careful!
 
-// Default wheel 1
-bind "-" "+chatwheel; chat1_default1"
-alias chat1_default1 "chat_wheel_phrase_0 8;chat_wheel_phrase_1 29;chat_wheel_phrase_2 2;chat_wheel_phrase_3 3;chat_wheel_phrase_4 7;chat_wheel_phrase_5 40;chat_wheel_phrase_6 6;chat_wheel_phrase_7 32;"
+// Positioning and Laning
+bind "-" "+chatwheel; chat1_wheel1"
+alias chat1_wheel1 "chat_wheel_phrase_0 8;chat_wheel_phrase_1 29;chat_wheel_phrase_2 2;chat_wheel_phrase_3 3;chat_wheel_phrase_4 7;chat_wheel_phrase_5 40;chat_wheel_phrase_6 6;chat_wheel_phrase_7 32;"
 
 //                          Push
 //            Up Courier                  Invis Enemy Nearby
@@ -113,13 +112,13 @@ alias chat1_default1 "chat_wheel_phrase_0 8;chat_wheel_phrase_1 29;chat_wheel_ph
 
 
 
-// Default wheel 2
-bind "=" "+chatwheel; chat1_default2"
-alias chat1_default2 "chat_wheel_phrase_0 55;chat_wheel_phrase_1 43;chat_wheel_phrase_2 2;chat_wheel_phrase_3 15;chat_wheel_phrase_4 20;chat_wheel_phrase_5 23;chat_wheel_phrase_6 12;chat_wheel_phrase_7 13;"
+// Gameplay and Coordination
+bind "=" "+chatwheel; chat1_wheel2"
+alias chat1_wheel2 "chat_wheel_phrase_0 81;chat_wheel_phrase_1 43;chat_wheel_phrase_2 2;chat_wheel_phrase_3 15;chat_wheel_phrase_4 20;chat_wheel_phrase_5 23;chat_wheel_phrase_6 13;chat_wheel_phrase_7 16;"
 
-//                          Go!
-//            Bait                       Initiate!
-//Dive                       +                       Wait
+//                          Initiate!
+//            Bait                       Spread Out
+//Dive                       +                       Destroy Tower then back
 //            Group up                   Buy TP
 //                          Back
 
