--- a/config.cfg
+++ b/config.cfg
@@ -27,6 +27,7 @@ bind "x" "dota_item_execute 1"
 bind "y" "+chatwheel"
 bind "z" "dota_item_execute 0"
 bind "KP_ENTER" "say"
+bind "[" "chatwheel_say 57; say_team Aegis expires in 5 mins, Rosh up in 8-11."
 bind "]" "toggle dota_health_per_vertical_marker 169 333 450 263 507 543 356 712 637"
 bind "`" "+showscores"
 bind "," "chatwheel_say 2"
@@ -107,7 +108,7 @@ chat_wheel_phrase_1 "29"
 chat_wheel_phrase_2 "2"
 chat_wheel_phrase_3 "3"
 chat_wheel_phrase_4 "7"
-chat_wheel_phrase_5 "62"
+chat_wheel_phrase_5 "40"
 chat_wheel_phrase_6 "6"
 chat_wheel_phrase_7 "32"
 chet_debug_idle "0"
@@ -145,9 +146,9 @@ dota_assassin_announce_timeout "20.0"
 dota_assassin_complete_timeout "12.0"
 dota_bot_match_difficulty "2"
 dota_bot_match_team "2"
-dota_bot_match_use_matchmaking "1"
-dota_bot_practice_difficulty "1"
-dota_bot_practice_team "0"
+dota_bot_match_use_matchmaking "0"
+dota_bot_practice_difficulty "2"
+dota_bot_practice_team "2"
 dota_broadcaster_channel_country_name ""
 dota_broadcaster_channel_description ""
 dota_broadcaster_channel_language ""
@@ -164,7 +165,7 @@ dota_chat_mute_all "0"
 dota_compendium_available_version_seen "0"
 dota_compendium_bundle_last_popup_time "0"
 dota_compendium_stretch_goal_popup_tracker "252862"
-dota_competitive_game_modes "4194304"
+dota_competitive_game_modes "4194308"
 dota_custom_channels "Trivia;Dem!goD;"
 dota_damage_flash "1"
 dota_embers "0"
@@ -174,7 +175,7 @@ dota_fight_recap_pause "0"
 dota_fight_recap_terse "0"
 dota_force_right_click_attack "0"
 dota_frontpage_event_last_clicked_time "0"
-dota_gamemodes_selected_over_lifetime "73735"
+dota_gamemodes_selected_over_lifetime "77847"
 dota_gamescom_althack "0"
 dota_hud_colorblind "0"
 dota_hud_flip "0"
@@ -183,12 +184,12 @@ dota_hugeportrait "0.48"
 dota_ignore_nonfriend_guild_invites "0"
 dota_ignore_nonfriend_invites "0"
 dota_inventory_shuffled_slots "232"
-dota_match_game_modes "8194"
+dota_match_game_modes "8210"
 dota_match_game_modes_version "1"
 dota_match_languages "2"
 dota_match_map_preference_new "1"
 dota_matchgroups "3"
-dota_matchgroups_automatic "1"
+dota_matchgroups_automatic "7"
 dota_matchgroups_version "4"
 dota_minimap_always_draw_hero_icons "0"
 dota_minimap_draw_cocaster_camera "1"
@@ -249,7 +250,7 @@ dota_unit_interact_flash_duration "0.2"
 dsp_enhance_stereo "0"
 dsp_slow_cpu "0"
 dsp_volume "0.8"
-econ_price_sheet_crc "1518480909"
+econ_price_sheet_crc "415423973"
 enable_boneflex "1"
 engine_no_focus_sleep "0"
 func_break_max_pieces "15"
@@ -343,7 +344,7 @@ overview_health "1"
 overview_locked "1"
 overview_names "1"
 overview_tracks "1"
-password "816662347180275147"
+password "869872570124041796"
 r_drawmodelstatsoverlaymax "1.5"
 r_drawmodelstatsoverlaymin "0.1"
 r_eyegloss "1"
@@ -414,7 +415,7 @@ voice_modenable "1"
 voice_scale "1"
 voice_threshold "4000"
 voice_vox "0"
-volume "0.903869"
+volume "0.803852"
 vprof_graphheight "256"
 vprof_graphwidth "512"
 vprof_unaccounted_limit "0.3"
