Updated scroll speed

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -20,10 +20,14 @@ con_enable "1"
 //sv_cheats "1"
 
 //When enabled, right clicking an allied creep can deny it
-dota_force_right_click_attack 0
+dota_force_right_click_attack "0"
 
 //Camera can't zoom in game mode
 dota_camera_disable_zoom "1"
+
+//Allows Alt+Rightclick to move without pathfinding
+dota_unit_allow_moveto_direction "1"
+
 
 ///////////////////////////////
 //    Net_graph Settings    //
@@ -46,7 +50,7 @@ bind "\" "ngToggle"
 dota_embers "0"
 
 dota_always_show_player_names "1"     //Force show all player's names
-dota_camera_speed "3000"              //Increase the camera scrolling speed
+dota_camera_speed "6500"              //Increase the camera scrolling speed
 dota_player_multipler_orders "1"      //CTRL+click to select all units you control
 dota_player_units_auto_attack "1"     //Summoned units always auto attack
 // dota_reset_camera_on_spawn "0"     //Camera doesn't jump to hero on respawn
