--- a/config.cfg
+++ b/config.cfg
@@ -14,7 +14,6 @@ bind "b" "dota_item_execute 4"
 bind "c" "dota_item_execute 2"
 bind "g" "+voicerecord"
 bind "h" "dota_hold"
-bind "i" "inspectheroinworld"
 bind "l" "dota_glyph"
 bind "m" "mc_move"
 bind "n" "dota_item_execute 5"
@@ -34,8 +33,8 @@ bind "," "chatwheel_say 2"
 bind "." "chatwheel_say 1"
 bind "/" "HeroIcons_toggle"
 bind "\" "ngToggle"
-bind "-" "+chatwheel; chat1_default1"
-bind "=" "+chatwheel; chat1_default2"
+bind "-" "+chatwheel; chat1_wheel1"
+bind "=" "+chatwheel; chat1_wheel2"
 bind "ENTER" "say"
 bind "SPACE" "dota_recent_event"
 bind "TAB" "dota_cycle_selected"
@@ -144,11 +143,11 @@ dota_ability_self_cast_timeout "0.6"
 dota_always_show_player_names "1"
 dota_assassin_announce_timeout "20.0"
 dota_assassin_complete_timeout "12.0"
-dota_bot_match_difficulty "2"
+dota_bot_match_difficulty "3"
 dota_bot_match_team "2"
 dota_bot_match_use_matchmaking "0"
-dota_bot_practice_difficulty "2"
-dota_bot_practice_team "2"
+dota_bot_practice_difficulty "1"
+dota_bot_practice_team "0"
 dota_broadcaster_channel_country_name ""
 dota_broadcaster_channel_description ""
 dota_broadcaster_channel_language ""
@@ -160,12 +159,12 @@ dota_camera_edgemove "1"
 dota_camera_hold_select_to_follow "0"
 dota_camera_lock_lerp "0.0"
 dota_camera_reverse "0"
-dota_camera_speed "3957"
+dota_camera_speed "6500"
 dota_chat_mute_all "0"
 dota_compendium_available_version_seen "0"
 dota_compendium_bundle_last_popup_time "0"
 dota_compendium_stretch_goal_popup_tracker "252862"
-dota_competitive_game_modes "4194308"
+dota_competitive_game_modes "4194304"
 dota_custom_channels "Trivia;Dem!goD;"
 dota_damage_flash "1"
 dota_embers "0"
@@ -175,23 +174,25 @@ dota_fight_recap_pause "0"
 dota_fight_recap_terse "0"
 dota_force_right_click_attack "0"
 dota_frontpage_event_last_clicked_time "0"
-dota_gamemodes_selected_over_lifetime "77847"
+dota_gamemodes_selected_over_lifetime "4272183"
 dota_gamescom_althack "0"
 dota_hud_colorblind "0"
 dota_hud_flip "0"
 dota_hud_healthbar_number "1"
+dota_hud_reduced_flash "1"
 dota_hugeportrait "0.48"
 dota_ignore_nonfriend_guild_invites "0"
 dota_ignore_nonfriend_invites "0"
-dota_inventory_shuffled_slots "232"
-dota_match_game_modes "8210"
+dota_inventory_shuffled_slots "4232"
+dota_match_game_modes "8192"
 dota_match_game_modes_version "1"
 dota_match_languages "2"
 dota_match_map_preference_new "1"
-dota_matchgroups "3"
+dota_matchgroups "1"
 dota_matchgroups_automatic "7"
 dota_matchgroups_version "4"
 dota_minimap_always_draw_hero_icons "0"
+dota_minimap_disable_rightclick "0"
 dota_minimap_draw_cocaster_camera "1"
 dota_minimap_hero_name_shadowsize "8"
 dota_minimap_hide_background "0"
@@ -202,16 +203,16 @@ dota_minimap_simple_colors "0"
 dota_mouse_spectator_window_lock "0"
 dota_mouse_window_lock "1"
 dota_mute_cobroadcasters "1"
-dota_play_landing_tab "1"
+dota_play_landing_tab "0"
 dota_player_add_summoned_to_selection "0"
 dota_player_auto_purchase_items "0"
+dota_player_auto_repeat_right_mouse "0"
 dota_player_multipler_orders "1"
 dota_player_simplified_controls "0"
 dota_player_smart_multiunit_cast "0"
 dota_player_teleport_requires_halt "0"
 dota_player_units_auto_attack "1"
 dota_player_units_auto_attack_after_spell "0"
-dota_predictions_tooltip_seen_count "4"
 dota_quit_immediate "0"
 dota_reset_camera_on_spawn "0"
 dota_screen_shake "0"
@@ -245,12 +246,13 @@ dota_ti_announcements_right_cycle_time "15.0"
 dota_ti_announcements_update_fantasy_time "30"
 dota_ti_announcements_update_time "30"
 dota_ti_onstage_side "0"
-dota_trading_show_requests_from "1"
+dota_trading_show_requests_from "0"
+dota_unit_allow_moveto_direction "1"
 dota_unit_interact_flash_duration "0.2"
 dsp_enhance_stereo "0"
 dsp_slow_cpu "0"
 dsp_volume "0.8"
-econ_price_sheet_crc "415423973"
+econ_price_sheet_crc "1035102564"
 enable_boneflex "1"
 engine_no_focus_sleep "0"
 func_break_max_pieces "15"
@@ -319,7 +321,7 @@ mat_monitorgamma_tv_enabled "0"
 mat_queue_report "0"
 mat_spewalloc "0"
 muzzleflash_light "1"
-name "MistyTalon"
+name "Charmander"
 net_graph "0"
 net_graphheight "64"
 net_graphholdsvframerate "0"
@@ -344,7 +346,7 @@ overview_health "1"
 overview_locked "1"
 overview_names "1"
 overview_tracks "1"
-password "869872570124041796"
+password "729387075367802599"
 r_drawmodelstatsoverlaymax "1.5"
 r_drawmodelstatsoverlaymin "0.1"
 r_eyegloss "1"
@@ -366,11 +368,11 @@ snd_duckerreleasetime "2.5"
 snd_duckerthreshold "0.15"
 snd_ducking_off "1"
 snd_ducktovolume "0.55"
-snd_gamevoicevolume "0.720080"
-snd_gamevolume "0.704036"
+snd_gamevoicevolume "0.507252"
+snd_gamevolume "0.456037"
 snd_legacy_surround "0"
 snd_mixahead "0.1"
-snd_musicvolume "0.351298"
+snd_musicvolume "0.206498"
 snd_mute_losefocus "1"
 snd_pitchquality "1"
 snd_voipvolume "1.000000"
@@ -402,7 +404,7 @@ texture_budget_panel_height "284"
 texture_budget_panel_width "512"
 texture_budget_panel_x "0"
 texture_budget_panel_y "450"
-tv_nochat "0"
+tv_nochat "1"
 vgui_message_dialog_modal "1"
 viewmodel_offset_x "0.0"
 viewmodel_offset_y "0.0"
@@ -415,7 +417,7 @@ voice_modenable "1"
 voice_scale "1"
 voice_threshold "4000"
 voice_vox "0"
-volume "0.803852"
+volume "0.607469"
 vprof_graphheight "256"
 vprof_graphwidth "512"
 vprof_unaccounted_limit "0.3"
