Updated Autoexec for reborn

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -2,7 +2,7 @@
 //Originally from http://github.com/bxio/dota2settings
 
 //Directions:
-//1. Enable the Dota 2 console: http://www.hattongames.com/2012/03/how-to-enable-the-console-in-dota-2
+//1. Enable the Dota 2 console
 //2. Place script in <Steam folder>/SteamApps/common/dota 2 beta/dota/cfg.
 //3. For changes to take effect, restart Dota or enter "exec autoexec.cfg" into the console. If you're in game, you can hit F10 to reload changes as well.
 
@@ -74,7 +74,7 @@ dota_minimap_hero_size "1000"
 bind "[" "chatwheel_say 57; say_team Aegis expires in 5 mins, Rosh up in 8-11."
 
 //toggle health keys
-bind "]" "toggle dota_health_per_vertical_marker 169 333 450 263 507 543 356 712 637"
+bind "]" "toggle dota_health_per_vertical_marker 168 262 356 450 543 637 337 506 712"
 
 //Quick Runecheck Using P
 alias "rune" "focus_toprune"        // Toggle between Top-Bot
