--- a/config.cfg
+++ b/config.cfg
@@ -20,6 +20,7 @@ bind "n" "dota_item_execute 5"
 bind "o" "dota_ability_learn_mode"
 bind "p" "rune"
 bind "s" "dota_stop"
+bind "t" "use_item_client current_hero taunt"
 bind "u" "dota_learn_stats"
 bind "v" "dota_item_execute 3"
 bind "x" "dota_item_execute 1"
@@ -27,7 +28,7 @@ bind "y" "+chatwheel"
 bind "z" "dota_item_execute 0"
 bind "KP_ENTER" "say"
 bind "[" "chatwheel_say 57; say_team Aegis expires in 5 mins, Rosh up in 8-11."
-bind "]" "toggle dota_health_per_vertical_marker 169 333 450 263 507 543 356 712 637"
+bind "]" "toggle dota_health_per_vertical_marker 168 262 356 450 543 637 337 506 712"
 bind "`" "+showscores"
 bind "," "chatwheel_say 2"
 bind "." "chatwheel_say 1"
@@ -146,8 +147,8 @@ dota_assassin_complete_timeout "12.0"
 dota_bot_match_difficulty "3"
 dota_bot_match_team "2"
 dota_bot_match_use_matchmaking "0"
-dota_bot_practice_difficulty "1"
-dota_bot_practice_team "0"
+dota_bot_practice_difficulty "3"
+dota_bot_practice_team "2"
 dota_broadcaster_channel_country_name ""
 dota_broadcaster_channel_description ""
 dota_broadcaster_channel_language ""
@@ -161,11 +162,11 @@ dota_camera_lock_lerp "0.0"
 dota_camera_reverse "0"
 dota_camera_speed "6500"
 dota_chat_mute_all "0"
-dota_compendium_available_version_seen "0"
+dota_compendium_2015_available_version_seen "6"
 dota_compendium_bundle_last_popup_time "0"
 dota_compendium_stretch_goal_popup_tracker "252862"
-dota_competitive_game_modes "4194304"
-dota_custom_channels "Trivia;Dem!goD;"
+dota_competitive_game_modes "4194308"
+dota_custom_channels "Trivia;"
 dota_damage_flash "1"
 dota_embers "0"
 dota_fake_custom_killbanner "1"
@@ -183,13 +184,13 @@ dota_hud_reduced_flash "1"
 dota_hugeportrait "0.48"
 dota_ignore_nonfriend_guild_invites "0"
 dota_ignore_nonfriend_invites "0"
-dota_inventory_shuffled_slots "4232"
-dota_match_game_modes "8192"
+dota_inventory_shuffled_slots "4224"
+dota_match_game_modes "8194"
 dota_match_game_modes_version "1"
 dota_match_languages "2"
 dota_match_map_preference_new "1"
 dota_matchgroups "1"
-dota_matchgroups_automatic "7"
+dota_matchgroups_automatic "3"
 dota_matchgroups_version "4"
 dota_minimap_always_draw_hero_icons "0"
 dota_minimap_disable_rightclick "0"
@@ -203,7 +204,8 @@ dota_minimap_simple_colors "0"
 dota_mouse_spectator_window_lock "0"
 dota_mouse_window_lock "1"
 dota_mute_cobroadcasters "1"
-dota_play_landing_tab "0"
+dota_play_landing_tab "1"
+dota_play_spectate_hero_pick_lines "1"
 dota_player_add_summoned_to_selection "0"
 dota_player_auto_purchase_items "0"
 dota_player_auto_repeat_right_mouse "0"
@@ -213,6 +215,7 @@ dota_player_smart_multiunit_cast "0"
 dota_player_teleport_requires_halt "0"
 dota_player_units_auto_attack "1"
 dota_player_units_auto_attack_after_spell "0"
+dota_projection_enabled "1"
 dota_quit_immediate "0"
 dota_reset_camera_on_spawn "0"
 dota_screen_shake "0"
@@ -239,20 +242,22 @@ dota_steamcontroller_view_haptic_intensity "2"
 dota_steamcontroller_view_mode "0"
 dota_steamcontroller_view_sensitivity "-5"
 dota_swap_mouse_spellcast "0"
-dota_ti_announcements_fantasy "1"
-dota_ti_announcements_left_cycle_time "8.0"
+dota_ti_announcements_cycle_time "8.0"
+dota_ti_announcements_manual_schedule "0"
 dota_ti_announcements_no_team_logos "0"
-dota_ti_announcements_right_cycle_time "15.0"
-dota_ti_announcements_update_fantasy_time "30"
+dota_ti_announcements_schedule_league_id "2733"
 dota_ti_announcements_update_time "30"
 dota_ti_onstage_side "0"
+dota_ti_onstage_side_highlight_scoreboard "0"
+dota_ti_onstage_side_scoreboard_rotate_time "3"
+dota_ti_podseats_data_file "scripts/tournaments/ti_podseats.txt"
 dota_trading_show_requests_from "0"
 dota_unit_allow_moveto_direction "1"
 dota_unit_interact_flash_duration "0.2"
 dsp_enhance_stereo "0"
 dsp_slow_cpu "0"
 dsp_volume "0.8"
-econ_price_sheet_crc "1035102564"
+econ_price_sheet_crc "-391601746"
 enable_boneflex "1"
 engine_no_focus_sleep "0"
 func_break_max_pieces "15"
@@ -346,7 +351,7 @@ overview_health "1"
 overview_locked "1"
 overview_names "1"
 overview_tracks "1"
-password "729387075367802599"
+password "675244758535508840"
 r_drawmodelstatsoverlaymax "1.5"
 r_drawmodelstatsoverlaymin "0.1"
 r_eyegloss "1"
@@ -368,8 +373,8 @@ snd_duckerreleasetime "2.5"
 snd_duckerthreshold "0.15"
 snd_ducking_off "1"
 snd_ducktovolume "0.55"
-snd_gamevoicevolume "0.507252"
-snd_gamevolume "0.456037"
+snd_gamevoicevolume "0.757930"
+snd_gamevolume "0.504103"
 snd_legacy_surround "0"
 snd_mixahead "0.1"
 snd_musicvolume "0.206498"
@@ -398,13 +403,14 @@ sv_specnoclip "1"
 sv_specspeed "3"
 sv_unlockedchapters "1"
 sv_voiceenable "1"
+test_compendium_path ""
 texture_budget_background_alpha "128"
 texture_budget_panel_bottom_of_history_fraction ".25"
 texture_budget_panel_height "284"
 texture_budget_panel_width "512"
 texture_budget_panel_x "0"
 texture_budget_panel_y "450"
-tv_nochat "1"
+tv_nochat "0"
 vgui_message_dialog_modal "1"
 viewmodel_offset_x "0.0"
 viewmodel_offset_y "0.0"
