Updated for Reborn

--- a/config.cfg
+++ b/config.cfg
@@ -14,13 +14,15 @@ bind "b" "dota_item_execute 4"
 bind "c" "dota_item_execute 2"
 bind "g" "+voicerecord"
 bind "h" "dota_hold"
+bind "i" "inspectheroinworld"
+bind "k" "chatwheel_say 32"
 bind "l" "dota_glyph"
 bind "m" "mc_move"
 bind "n" "dota_item_execute 5"
 bind "o" "dota_ability_learn_mode"
 bind "p" "rune"
 bind "s" "dota_stop"
-bind "t" "use_item_client current_hero taunt"
+bind "t" "chatwheel_say 57"
 bind "u" "dota_learn_stats"
 bind "v" "dota_item_execute 3"
 bind "x" "dota_item_execute 1"
@@ -49,7 +51,7 @@ bind "F2" "dota_select_all_others"
 bind "F3" "dota_select_courier"
 bind "F4" "dota_purchase_quickbuy"
 bind "F5" "dota_courier_deliver"
-bind "F6" "stash_grab_all"
+bind "F6" "dota_courier_burst"
 bind "F7" "toggleshoppanel"
 bind "F8" "dota_purchase_stickybuy"
 bind "F9" "dota_pause"
@@ -60,7 +62,7 @@ _overview_mode "1"
 adsp_debug "0"
 ai_report_task_timings_on_limit "0"
 ai_think_limit_label "0"
-browse_custom_games_region "-1"
+browse_custom_games_region "1"
 budget_averages_window "30"
 budget_background_alpha "128"
 budget_bargraph_background_alpha "128"
@@ -68,7 +70,7 @@ budget_bargraph_range_ms "16.6666666667"
 budget_history_numsamplesvisible "100"
 budget_history_range_ms "66.666666667"
 budget_panel_bottom_of_history_fraction ".25"
-budget_panel_height "768"
+budget_panel_height "384"
 budget_panel_width "512"
 budget_panel_x "0"
 budget_panel_y "50"
@@ -143,12 +145,12 @@ dota_ability_quick_cast "0"
 dota_ability_self_cast_timeout "0.6"
 dota_always_show_player_names "1"
 dota_assassin_announce_timeout "20.0"
-dota_assassin_complete_timeout "12.0"
-dota_bot_match_difficulty "3"
+dota_assassin_complete_timeout "6.0"
+dota_bot_match_difficulty "4"
 dota_bot_match_team "2"
-dota_bot_match_use_matchmaking "0"
-dota_bot_practice_difficulty "3"
-dota_bot_practice_team "2"
+dota_bot_match_use_matchmaking "1"
+dota_bot_practice_difficulty "1"
+dota_bot_practice_team "0"
 dota_broadcaster_channel_country_name ""
 dota_broadcaster_channel_description ""
 dota_broadcaster_channel_language ""
@@ -164,8 +166,8 @@ dota_camera_speed "6500"
 dota_chat_mute_all "0"
 dota_compendium_2015_available_version_seen "6"
 dota_compendium_bundle_last_popup_time "0"
-dota_compendium_stretch_goal_popup_tracker "252862"
-dota_competitive_game_modes "4194308"
+dota_compendium_stretch_goal_popup_tracker "190"
+dota_competitive_game_modes "4194304"
 dota_custom_channels "Trivia;"
 dota_damage_flash "1"
 dota_embers "0"
@@ -175,22 +177,22 @@ dota_fight_recap_pause "0"
 dota_fight_recap_terse "0"
 dota_force_right_click_attack "0"
 dota_frontpage_event_last_clicked_time "0"
-dota_gamemodes_selected_over_lifetime "4272183"
+dota_gamemodes_selected_over_lifetime "1056769"
 dota_gamescom_althack "0"
 dota_hud_colorblind "0"
 dota_hud_flip "0"
 dota_hud_healthbar_number "1"
-dota_hud_reduced_flash "1"
+dota_hud_reduced_flash "0"
 dota_hugeportrait "0.48"
-dota_ignore_nonfriend_guild_invites "0"
+dota_ignore_nonfriend_guild_invites "1"
 dota_ignore_nonfriend_invites "0"
-dota_inventory_shuffled_slots "4224"
-dota_match_game_modes "8194"
+dota_inventory_shuffled_slots "160"
+dota_match_game_modes "8192"
 dota_match_game_modes_version "1"
 dota_match_languages "2"
-dota_match_map_preference_new "1"
-dota_matchgroups "1"
-dota_matchgroups_automatic "3"
+dota_match_map_preference_new "2"
+dota_matchgroups "3"
+dota_matchgroups_automatic "1"
 dota_matchgroups_version "4"
 dota_minimap_always_draw_hero_icons "0"
 dota_minimap_disable_rightclick "0"
@@ -204,7 +206,7 @@ dota_minimap_simple_colors "0"
 dota_mouse_spectator_window_lock "0"
 dota_mouse_window_lock "1"
 dota_mute_cobroadcasters "1"
-dota_play_landing_tab "1"
+dota_play_landing_tab "0"
 dota_play_spectate_hero_pick_lines "1"
 dota_player_add_summoned_to_selection "0"
 dota_player_auto_purchase_items "0"
@@ -215,10 +217,11 @@ dota_player_smart_multiunit_cast "0"
 dota_player_teleport_requires_halt "0"
 dota_player_units_auto_attack "1"
 dota_player_units_auto_attack_after_spell "0"
-dota_projection_enabled "1"
+dota_projection_enabled "0"
 dota_quit_immediate "0"
-dota_reset_camera_on_spawn "0"
-dota_screen_shake "0"
+dota_reborn_opt_out "0"
+dota_reset_camera_on_spawn "1"
+dota_screen_shake "1"
 dota_selector_fulldeck_dynamic "1"
 dota_sf_hero_selection_seen "1"
 dota_shop_force_hotkeys "0"
@@ -251,13 +254,13 @@ dota_ti_onstage_side "0"
 dota_ti_onstage_side_highlight_scoreboard "0"
 dota_ti_onstage_side_scoreboard_rotate_time "3"
 dota_ti_podseats_data_file "scripts/tournaments/ti_podseats.txt"
-dota_trading_show_requests_from "0"
+dota_trading_show_requests_from "1"
 dota_unit_allow_moveto_direction "1"
 dota_unit_interact_flash_duration "0.2"
-dsp_enhance_stereo "0"
+dsp_enhance_stereo "1"
 dsp_slow_cpu "0"
 dsp_volume "0.8"
-econ_price_sheet_crc "-391601746"
+econ_price_sheet_crc "1058381992"
 enable_boneflex "1"
 engine_no_focus_sleep "0"
 func_break_max_pieces "15"
@@ -326,7 +329,7 @@ mat_monitorgamma_tv_enabled "0"
 mat_queue_report "0"
 mat_spewalloc "0"
 muzzleflash_light "1"
-name "Charmander"
+name "I'm Worthless & My Team Noob"
 net_graph "0"
 net_graphheight "64"
 net_graphholdsvframerate "0"
@@ -351,7 +354,7 @@ overview_health "1"
 overview_locked "1"
 overview_names "1"
 overview_tracks "1"
-password "675244758535508840"
+password "751655501450059398"
 r_drawmodelstatsoverlaymax "1.5"
 r_drawmodelstatsoverlaymin "0.1"
 r_eyegloss "1"
@@ -373,16 +376,16 @@ snd_duckerreleasetime "2.5"
 snd_duckerthreshold "0.15"
 snd_ducking_off "1"
 snd_ducktovolume "0.55"
-snd_gamevoicevolume "0.757930"
-snd_gamevolume "0.504103"
+snd_gamevoicevolume "0.655937"
+snd_gamevolume "0.508357"
 snd_legacy_surround "0"
 snd_mixahead "0.1"
-snd_musicvolume "0.206498"
+snd_musicvolume "0.257669"
 snd_mute_losefocus "1"
 snd_pitchquality "1"
 snd_voipvolume "1.000000"
 sound_device_override ""
-speaker_config "-1"
+speaker_config "0"
 spec_scoreboard "0"
 ss_splitmode "0"
 store_version "1"
@@ -421,9 +424,9 @@ voice_enable "1"
 voice_forcemicrecord "1"
 voice_modenable "1"
 voice_scale "1"
-voice_threshold "4000"
+voice_threshold "4000.000000"
 voice_vox "0"
-volume "0.607469"
+volume "0.398325"
 vprof_graphheight "256"
 vprof_graphwidth "512"
 vprof_unaccounted_limit "0.3"
